Added API env variables

--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,10 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+SBER_API_NAME=
+SBER_API_PASSWORD=
+
+SBIS_APP_ID=
+SBIS_PROTECTED_KEY=
+SBIS_SERVICE_KEY=
